user profile changes

--- a/src/server/views/catalog.pug
+++ b/src/server/views/catalog.pug
@@ -5,7 +5,7 @@ html(lang="en")
 		include partials/common.pug
 		meta(charset= "utf-8")
 		title= Business
-		link(rel="stylesheet" href="/../css/landing.css")
+		link(rel="stylesheet" href="/../css/catalog.css")
 	body
 		div(id="content")
-		script(src="/../bundles/home.bundle.js")
+		script(src="/../bundles/catalog.bundle.js")
